# solarwatt-energymanager-py

./: .gitignore  LICENSE  README.md  setup.cfg
src/: battery_converter_device.py  device.py  energy_manager.py  energy_manager_data.py  energy_manager_device.py  location_device.py
src/solarwatt_energymanager/: __init__.py  battery_converter_device.py  device.py  energy_manager.py  energy_manager_data.py  energy_manager_device.py  ev_station_device.py  location_device.py  power_meter_device.py  s0_counter_device.py
tests/: data1.json  data1_test.py  data2.json  data2_test.py  data3.json  data3_test.py  data4.json  data4_test.py  data5.json  data5_test.py  energy_manager_test.py
