[metadata]
name = solarwatt-energymanager
version = 0.1.0
author = Mas Shimizu
author_email = mshimizu@gmail.com
description = Provides an easy way to query data from the SOLARWATT EnergyManager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mas2112/solarwatt-energymanager-py
project_urls =
    Bug Tracker = https://github.com/Mas2112/solarwatt-energymanager-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp

[options.packages.find]
where = src
